Tercer parcial terminado
y asi quea la pagina final de Oscar Alberto Diaz Zumaya 4B de programacion turno vespertino

--- a/perfil.html
+++ b/perfil.html
@@ -1,41 +1,80 @@
-.<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
-	 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcd.bootstrapcdn.con/bootstrap/3.3.1/css/bootstrap-theme.min.css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-<link rel="stylesheet" type="text/css" href="formulario.css">
-	<title>Kanazawa Suzuka</title>
+<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" type="text/css" href="foooter.css">    
+<link rel="stylesheet" type="text/css" href="formulario.css">            
+<title>Api Movies </title>
 </head>
-<body>
+<body >
+
+<div style="margin:20px;">
+    <nav class="navbar navbar-light" style="background-color: #E4C1F9;">
+    <div class="container">
+    <a class="navbar-brand" href="index.html">Inicio</a>
+    <ul class="nav navbar-nav">
+<li>
+<a href="menu.html">Menu</a> 
+</li>
+<li>
+    <a href="formulario.html">Formulario</a>
+</li>
+<li>
+    <a href="cuestionario.html">Cuestionario</a>
+</li>
+<li>
+<a href="perfil.html">Perfil</a>
+</li>
+</li>
+<li>
+<a href="apimovie.html">Api Movies</a>
+</li>
+</li>
+<li>
+<a href="calculadorafisica.html">Calculadorafisica</a>
+</li>
+</li>
+<li>
+<a href="calculadora.html">Calculadora</a>
+</li>
+</ul>
+</div>
+</nav>
+
+<table style="background-color: #E4C1F9 ; font-family: Verdana,  Geneva, Tahoma, sans-serif; width: 900px; position: center;"">
+    <tr>
+       <td>
+        <img src="suzuka.jpg" alt="suzu" style="max-width: 200px; height: auto;position: relative; overflow: hidden; display: block; margin: 0 0 0%; -webkit-border-radius:50%; -moz-border-radius:50%; -ms-border-radius:50%; -o-border-radius:50%; border-radius:50%; border:10px DOUBLE #E4C1F9;  ">
+       </td>
+       <td>
+        <p style="color: ;">Genero: <b>Femenino</b></p>
+        <p style="color: ;">Raza: <b>Asiatica</b></p>
+        <p style="color: ;">Nacimiento: <b>19/07/2001</b></p>
+        <p style="color: ;">Calle: <b></b>1509 Deer Haven Drive</p>
+        <p style="color: ;">Ciudad: <b>Greenville, South Carolina(SC), 29615</b></p>
+        <p style="color: ;">Telefono: <b>864-356-4994</b></p>
+        <p style="color: ;">Celular: <b></b>803-410-9854
+        </p>
+       </td>
+    </tr>
+    <tr>
+        <td style="background-color: ">Suzuka de Atarashi Gakko</td>
+    </tr>
 <table style="background-color: #E4C1F9 ; font-family: Verdana,  Geneva, Tahoma, sans-serif; width: 900px; position: center;">
-	<tr>
-	   <td>
-	   	<img src="suzuka.jpg" alt="suzu" style="max-width: 200px; height: auto;position: relative; overflow: hidden; display: block; margin: 0 0 0%; -webkit-border-radius:50%; -moz-border-radius:50%; -ms-border-radius:50%; -o-border-radius:50%; border-radius:50%; border:10px DOUBLE #E4C1F9;  ">
-	   </td>
-	   <td>
-	   	<p style="color: ;">Genero: <b>Femenino</b></p>
-	   	<p style="color: ;">Raza: <b>Asiatica</b></p>
-	   	<p style="color: ;">Nacimiento: <b>19/07/2001</b></p>
-	   	<p style="color: ;">Calle: <b></b>1509 Deer Haven Drive</p>
-	   	<p style="color: ;">Ciudad: <b>Greenville, South Carolina(SC), 29615</b></p>
-	   	<p style="color: ;">Telefono: <b>864-356-4994</b></p>
-	   	<p style="color: ;">Celular: <b></b>803-410-9854
-	   	</p>
-	   </td>
-	</tr>
-	<tr>
-		<td style="background-color: ">Suzuka de Atarashi Gakko</td>
-	</tr>
-<table style="background-color: #E4C1F9 ; font-family: Verdana,  Geneva, Tahoma, sans-serif; width: 900px; position: center;">
-	<tr>
-		<td>
-		 <i class="fa fa-user" aria-hidden="true"
-		 style="color:red;">INFORMACION BASICA </i>
-		 <i class="fa fa-question-circle" aria-hidden="true" style="color: purple;"></i>
-		</td>
-	</tr>
-	<td style="color:white;">
-		<p style="color:black; font-family: times roman;">E-Mail:</p>
+    <tr>
+        <td>
+         <i class="fa fa-user" aria-hidden="true"
+         style="color:red;">INFORMACION BASICA </i>
+         <i class="fa fa-question-circle" aria-hidden="true" style="color: purple;"></i>
+        </td>
+    </tr>
+    <td style="color:white;">
+        <p style="color:black; font-family: times roman;">E-Mail:</p>
         <p style="color:black; font-family: times roman;">Altura:</p>
         <p style="color:black; font-family: times roman;">Peso:</p>
         <p style="color:black; font-family: times roman;">Color de cabello:</p>
@@ -45,44 +84,208 @@
         <p style="color:black; font-family: times roman;">Estado civil:</p>
         <p style="color:black; font-family: times roman;">Educacion:</p>
         <p style="color:black; font-family: times roman;">Historial de enfermedades:</p>
-	</td>
-	<td style="background-color:#E4C1F9  ; color:black;">
-		<p>susuka@japan.com</p>
-		<p>1.85</p>
-		<p>68kg</p>
-		<p>Negro</p>
-		<p>Negativo</p>
-		<p>Escorpion</p>
-		<p>Yuna</p>
-		<p>Soltera</p>
-		<p>Universitaria</p>
-		<p>Nula</p>
-	</td>
-	<tr>
-		<td>
-		 <i class="fa fa-check-square" aria-hidden="true"
-		 style="color:red;">INFORMACION DE EMPLEO </i>
-		 <i class="fa fa-question-circle" aria-hidden="true" style="color: purple;"></i>
-		</td>
-	</tr>
-	<td style="color:white;">
-		<p style="color:black; font-family: times roman;">Estado del empleo:</p>
+    </td>
+    <td style="background-color:#E4C1F9  ; color:black;">
+        <p>susuka@japan.com</p>
+        <p>1.85</p>
+        <p>68kg</p>
+        <p>Negro</p>
+        <p>Negativo</p>
+        <p>Escorpion</p>
+        <p>Yuna</p>
+        <p>Soltera</p>
+        <p>Universitaria</p>
+        <p>Nula</p>
+    </td>
+    <tr>
+        <td>
+         <i class="fa fa-check-square" aria-hidden="true"
+         style="color:red;">INFORMACION DE EMPLEO </i>
+         <i class="fa fa-question-circle" aria-hidden="true" style="color: purple;"></i>
+        </td>
+    </tr>
+    <td style="color:white;">
+        <p style="color:black; font-family: times roman;">Estado del empleo:</p>
         <p style="color:black; font-family: times roman;">Salrio mensual:</p>
         <p style="color:black; font-family: times roman;">Oscupacion:</p>
         <p style="color:black; font-family: times roman;">Nombre de la empresa:</p>
         <p style="color:black; font-family: times roman;">Tamano de la empresa:</p>
         <p style="color:black; font-family: times roman;">Industria:</p>
-	</td>
-	<td style="background-color:#E4C1F9  ; color:black;">
-		<p>Tiempo parcial</p>
-		<p>$120,000</p>
-		<p>Artista principal</p>
-		<p>YG Intertaiment</p>
-		<p>Gigaempresa</p>
-		<p>Musical</p>
+    </td>
+    <td style="background-color:#E4C1F9  ; color:black;">
+        <p>Tiempo parcial</p>
+        <p>$120,000</p>
+        <p>Artista principal</p>
+        <p>YG Intertaiment</p>
+        <p>Gigaempresa</p>
+        <p>Musical</p>
 
-	</td>
+    </td>
+<tr>
+<td>
+<i class="fa fa-check-square" aria-hidden="true" style="color:red;"></i>INFORMACION PERSONAL
+<i class="fa fa-question" aria-hidden="true" style="color:purple;"></i>
+</td>
+</tr>
+    <tr>
+      <td>
+<p style="color:black; font-family:times roman;">Miembros de la familia:</p>
+<p style="color:black; font-family:times roman;">Estado en linea:</p>
+<p style="color:black; font-family:times roman;">Firma en linea:</p>
+<p style="color:black; font-family:times roman;">Interes:</p>
+<p style="color:black; font-family:times roman;">Color favorito:</p>
+<p style="color:black; font-family:times roman;">pelicula favorita:</p>
+<p style="color:black; font-family:times roman;">Musica favorita:</p>
+<p style="color:black; font-family:times roman;">Cancion favorita:</p>
+<p style="color:black; font-family:times roman;">Libro favorito:</p>
+<p style="color:black; font-family:times roman;">Deporte favorito:</p>
+<p style="color:black; font-family:times roman;">Television favorito:</p>
+<p style="color:black; font-family:times roman;">  Estrella de cine favorito:</p>
+<p style="color:black; font-family:times roman;">cantante favorito:</p>
+<p style="color:black; font-family:times roman;">Comida favorita:</p>
+<p style="color:black; font-family:times roman;">Personalidad:</p>
+<p style="color:black; font-family:times roman;">Estilo personal</p>
+<p style="color:black; font-family:times roman;">Sitio web</p>
+
+     </td>
+      <td>
+        <p>4 miembros</p>
+        <p>Cantar</p>
+        <p>La comida es vida</p>
+        <p>Escucha cualquier frase musical o ritmo</p>
+        <p>Morado</p>
+        <p>Kimetsu No Yaiba:El tren infinito</p>
+            <p>kpop</p>
+        <p>Stay de Blackpink</p>
+        <p>Nadar</p>
+        <p>Recien Salido Del ABC</p>
+        <p>ABC</p>
+        <p>Justin min</p>
+        <p>Mishi Chwan</p>
+        <p>Pollo frito</p>
+        <p>Seria</p>
+        <p>Introvertida </p>
+        <p>suzuka.com</p>
+
+
+
+    </td>
+</tr>
+<tr>
+<td>
+<i class="fa fa-check-square" aria-hidden="true" style="color:red;"></i>PERFIL EN LINEA
+<i class="fa fa-question" aria-hidden="true" style="color:purple;"></i>
+</td>
+</tr>
+    <tr>
+      <td>
+<p style="color:black; font-family:times roman;">Nombre de usuario:</p>
+<p style="color:black; font-family:times roman;">contraseña:</p>
+<p style="color:black; font-family:times roman;">Contraseña despues de MD5:</p>
+<p style="color:black; font-family:times roman;">Hora de registro:</p>
+<p style="color:black; font-family:times roman;">Registrar IP:</p>
+<p style="color:black; font-family:times roman;">Hora de inicio :</p>
+<p style="color:black; font-family:times roman;">IP de ultima:</p>
+<p style="color:black; font-family:times roman;">Tiempo en linea:</p>
+<p style="color:black; font-family:times roman;">Puntos:</p>
+<p style="color:black; font-family:times roman;">Nivel:</p>
+<p style="color:black; font-family:times roman;">Numero de comentarios:</p>
+<p style="color:black; font-family:times roman;">Articulos publicados:</p>
+<p style="color:black; font-family:times roman;">Amigos:</p>
+<p style="color:black; font-family:times roman;">En linea ahora:</p>
+<p style="color:black; font-family:times roman;">Idioma:</p>
+<p style="color:black; font-family:times roman;">Id de referencia:</p>
+<p style="color:black; font-family:times roman;">Suscrito o no:</p>
+<p style="color:black; font-family:times roman;">Permitir aviso:</p>
+<p style="color:black; font-family:times roman;">Estado verificado:</p>
+<p style="color:black; font-family:times roman;">Pregunta de seguridad:</p>
+<p style="color:black; font-family:times roman;">Respuesta de seguridad:</p>
+     </td>
+      <td>
+        <p>suzukaaaaa</p>
+        <p>blackpink</p>
+        <p>8e49dc63823ef6c4501be551db054fb8</p>
+        <p>7:40</p>
+        <p>2013-08-10 18:43:03</p>
+        <p>156.15.247.204</p>   
+        <p>156.15.247.204</p>
+        <p>25 minutos</p>
+        <p>1234</p>
+        <p>156.15.247.204</p>
+        <p>1000000000000000</p>
+        <p>000</p>
+        <p>900,000</p>
+        <p>1030</p>
+        <p>NO</p>
+        <p>Coreano</p>
+        <p>Si</p>
+        <p>si</p>
+        <p>Verificado</p>
+        <p>¿cual es el nombre de tu tarjeta?</p>
+        <p>Ninguna</p>
+    </td>
+</tr>
+<tr>
+<td>
+<i class="fa fa-check-square" aria-hidden="true" style="color:red;"></i>OTRO
+<i class="fa fa-question" aria-hidden="true" style="color:purple;"></i>
+</td>
+</tr>
+    <tr>
+      <td>
+<p style="color:black; font-family:times roman;">Agente de usuario de navegador:</p>
+<p style="color:black; font-family:times roman;">Sistema:</p>
+<p style="color:black; font-family:times roman;">GUID:</p>
+<p style="color:black; font-family:times roman;">Coordenadas:</p>
+<p style="color:black; font-family:times roman;">Zona Horaria</p>
+<p style="color:black; font-family:times roman;">Número de seguimiento de UPS:</p>
+<p style="color:black; font-family:times roman;">País:</p>
+<p style="color:black; font-family:times roman;">Codigo de País:</p>
+     </td>
+      <td>
+        <p>Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, como Gecko) Chrome/58.0.3029.96</p>
+        <p>Windows 10</p>
+        <p>22cfd0b5-cc30-4712-8bbc-e7e312450614</p>
+        <p>40.720657(latitude), -74.096428(longitude)</p>
+        <p>UTC-5: Eastern Standard Time (EST)</p>
+        <p>Japan</p>
+        <p>7654</p>    
+    </td>
+</tr>
+
 </table>
 </table>
+<footer>
+    <div class="container">
+        <div class="footer-content">
+            <div class="footer-section about">
+                <h2>Contactame</h2>
+                <p>Si estas interesado en contactareme,puedes hacerlo atraves de cualquiera de nuestras redes sociales :</p>
+                <div class="contact-links">
+                    <a href="https://www.facebook.com/miperfil" target="_black">
+                        <i class="fab fa-facebook"></i>
+
+        <a href="https://www.instagram.com/miperfil" target="_black">
+        <i class="fab fa-instagram"></i>
+          <a href="https://www.twitter.com/miperfil" target="_black">
+            <i class="fab fa-twitter"></i>
+            <a href="https://www.snapchat.com/miperfil" target="_black">
+            <i class="fab fa-snapchat"></i>
+            <a href="https://www.youtube.com/miperfil" target="_black">
+            <i class="fab fa-youtube"></i></a>
+                </div>
+            </div>
+        </div>
+    </div>
+    </footer>
+<script >
+       const socialnetworks = document.querySelectorAll('.contact-links a');
+    socialnetworks.forEach(link => {
+        link.addEventListener('click', e => {
+            e.preventDefault();
+            window.open(link.href, '_blank');
+        });
+    });
+    </script>
 </body>
 </html>
