--- a/apimovie.html
+++ b/apimovie.html
@@ -55,6 +55,9 @@
   .red {
     color: red;
   }
+  .movie img {
+    max-width: 200px;
+  }
 </style>
 <div style="margin:24px;">
     <nav class="navbar navbar-light" style="background-color:#E4C1F9;">
